--- a/src/app/books/modules/home/home.component.html
+++ b/src/app/books/modules/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-2">
   <div class="row">
+    <h1>Books</h1>
     <div class="col col-md4 offset-md-4">
       <a routerLink="/add" class="btn btn-dark">Aggiungi nuovo libro</a>
     </div>
@@ -18,6 +19,33 @@
             <a class="btn btn-dark" [routerLink]="['/edit', book.id]">Edit</a>
             <button type="button" (click)="openDeleteModal(book.id)">Delete</button>
           </div>
+        </div>
+      </div>
+   </div>
+</div>
+
+<div class="container mt-2">
+  <div class="row">
+    <h1>Laptop</h1>
+    <div class="col col-md4 offset-md-4">
+      <a routerLink="/add" class="btn btn-dark">Aggiungi nuovo Laptop</a>
+    </div>
+  </div>
+   <div class="row rowcols-1 row-cols-md-3 g-4">
+      <div class="col" *ngFor="let laptop of laptops$ | async">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{ laptop.produttore }}</h5>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">{{ laptop.modello }}</li>
+              <li class="list-group-item">{{ laptop.dimensioneSchermo }}</li>
+              <li class="list-group-item">{{ laptop.modelloCPU }}</li>
+            </ul>
+          </div>
+          <!-- <div class="card-body">
+            <a class="btn btn-dark" [routerLink]="['/edit', book.id]">Edit</a>
+            <button type="button" (click)="openDeleteModal(book.id)">Delete</button>
+          </div> -->
         </div>
       </div>
    </div>
